--- a/Android/AdHoc.html
+++ b/Android/AdHoc.html
@@ -24,9 +24,9 @@
                 <td style="width : 43%">Release Note</td>
             </tr>
             <tr>
-                <td>V2.0.18.0930</td>
-                <td><a href="https://u.pcloud.link/publink/show?code=XZ8V3I0Zb35s8BnAGh5F6gROorM4U4G912CX">Click Install</a></td>
-                <td>2024/09/30</td>
+                <td>V2.0.20</td>
+                <td><a href="https://github.com/appedxtestpass168/Edismart/edit/main/Android/EdiSmart_release_V2.0.20_20251204.apk">Click Install</a></td>
+                <td>2025/12/4</td>
                 <td style="text-align:left">
                     <ul>
                         <li>Installation Notes</li>
@@ -39,8 +39,7 @@
 
                     <ul>
                           <li> Release Note </li>
-						  <li>open debug app and help reproduce bug</li>
-						   <li>log is save in Download\Edismart\EdismartLog_(mon&day)_(hour&min).txt</li>
+						  <li>16KB</li>
                      </ul>    
                  
 
