--- a/Android/AdHoc.html
+++ b/Android/AdHoc.html
@@ -25,7 +25,7 @@
             </tr>
             <tr>
                 <td>V2.0.20</td>
-                <td><a href="https://github.com/appedxtestpass168/Edismart/edit/main/Android/EdiSmart_release_V2.0.20_20251204.apk">Click Install</a></td>
+                <td><a href="https://appedxtestpass168.github.io/Edismart/Android/EdiSmart_release_V2.0.20_20251204.apk">Click Install</a></td>
                 <td>2025/12/4</td>
                 <td style="text-align:left">
                     <ul>
